# wgatools

./: .gitignore  CITATION.bib  Cargo.toml  LICENSE  README.md  benchmark.csv  flake.nix
.github/workflows/: ci.yml
data/: test.maf  test.paf
src/: caller.rs  cli.rs  converter.rs  errors.rs  lib.rs  log.rs  main.rs  utils.rs
src/converter/: chain2maf.rs  chain2paf.rs  maf2bam.rs  maf2chain.rs  maf2paf.rs  mod.rs  paf2block.rs  paf2chain.rs  paf2maf.rs
src/parser/: chain.rs  cigar.rs  common.rs  maf.rs  mod.rs  paf.rs
src/tools/: caller.rs  chunk.rs  dotplot.rs  filter.rs  index.rs  mafextra.rs  mod.rs  pafcov.rs  pileup.rs  pseudomaf.rs  rename.rs  stat.rs  trimovp.rs  tview.rs  validate.rs
test/: pp_test.paf  test.html  test.maf  testdotplot.paf
