[package]
name = "wgatools"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Wei <wjwei9908@gmail.com>",]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.3.16", features = ["derive"] }
crossterm = "0.27.0"
csv = "1.2.2"
itertools = "0.11.0"
log = "0.4.19"
log4rs = "1.2.0"
natord = "1.0.9"
nom = "7.1.3"
noodles = { version = "0.55.0", features = ["vcf", "sam"] }
ratatui = "0.24.0"
# noodles-vcf = "0.34.0"
# noodles = { features = ["vcf", "sam"] }
rayon = "1.7.0"
regex = "1.10.2"
rust-htslib = "0.44.1"
rust-lapper = "1.1.0"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.107"
thiserror = "1.0.50"
anyhow = "1.0.75"

[lib]
name = "wgalib"
path = "src/lib.rs"

[[bin]]
name = "wgatools"
path = "src/main.rs"
